@@ -29,6 +29,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|Objects
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -223,12 +232,6 @@ specifier|private
 specifier|final
 name|Term
 name|term
-decl_stmt|;
-DECL|field|docFreq
-specifier|private
-specifier|final
-name|int
-name|docFreq
 decl_stmt|;
 DECL|field|perReaderTermState
 specifier|private
@@ -816,36 +819,14 @@ name|Term
 name|t
 parameter_list|)
 block|{
-name|this
-argument_list|(
-name|t
-argument_list|,
-operator|-
-literal|1
-argument_list|)
-expr_stmt|;
-block|}
-comment|/**    * Expert: constructs a TermQuery that will use the provided docFreq instead    * of looking up the docFreq against the searcher.    */
-DECL|method|TermQuery
-specifier|public
-name|TermQuery
-parameter_list|(
-name|Term
-name|t
-parameter_list|,
-name|int
-name|docFreq
-parameter_list|)
-block|{
 name|term
 operator|=
-name|t
-expr_stmt|;
-name|this
+name|Objects
 operator|.
-name|docFreq
-operator|=
-name|docFreq
+name|requireNonNull
+argument_list|(
+name|t
+argument_list|)
 expr_stmt|;
 name|perReaderTermState
 operator|=
@@ -871,18 +852,21 @@ literal|null
 assert|;
 name|term
 operator|=
-name|t
-expr_stmt|;
-name|docFreq
-operator|=
-name|states
+name|Objects
 operator|.
-name|docFreq
-argument_list|()
+name|requireNonNull
+argument_list|(
+name|t
+argument_list|)
 expr_stmt|;
 name|perReaderTermState
 operator|=
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
 name|states
+argument_list|)
 expr_stmt|;
 block|}
 comment|/** Returns the term of this query. */
@@ -962,21 +946,6 @@ operator|.
 name|perReaderTermState
 expr_stmt|;
 block|}
-comment|// we must not ignore the given docFreq - if set use the given value (lie)
-if|if
-condition|(
-name|docFreq
-operator|!=
-operator|-
-literal|1
-condition|)
-name|termState
-operator|.
-name|setDocFreq
-argument_list|(
-name|docFreq
-argument_list|)
-expr_stmt|;
 return|return
 operator|new
 name|TermWeight
