@@ -125,6 +125,19 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|LeafReaderContext
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|MultiFields
 import|;
 end_import
@@ -151,6 +164,19 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|TermContext
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|Terms
 import|;
 end_import
@@ -162,9 +188,9 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|search
+name|index
 operator|.
-name|*
+name|TermsEnum
 import|;
 end_import
 begin_import
@@ -177,9 +203,85 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|similarities
+name|BooleanClause
+import|;
+end_import
+begin_import
+import|import
+name|org
 operator|.
-name|TFIDFSimilarity
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|BooleanQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|BoostAttribute
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|ConstantScoreQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|MaxNonCompetitiveBoostAttribute
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|Query
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|TermQuery
 import|;
 end_import
 begin_import
@@ -195,6 +297,21 @@ operator|.
 name|similarities
 operator|.
 name|DefaultSimilarity
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|similarities
+operator|.
+name|TFIDFSimilarity
 import|;
 end_import
 begin_import
@@ -1379,6 +1496,151 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+DECL|method|newTermQuery
+specifier|private
+name|Query
+name|newTermQuery
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|,
+name|Term
+name|term
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|ignoreTF
+condition|)
+block|{
+return|return
+operator|new
+name|ConstantScoreQuery
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+name|term
+argument_list|)
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+comment|// we build an artificial TermContext that will give an overall df and ttf
+comment|// equal to 1
+name|TermContext
+name|context
+init|=
+operator|new
+name|TermContext
+argument_list|(
+name|reader
+operator|.
+name|getContext
+argument_list|()
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|LeafReaderContext
+name|leafContext
+range|:
+name|reader
+operator|.
+name|leaves
+argument_list|()
+control|)
+block|{
+name|Terms
+name|terms
+init|=
+name|leafContext
+operator|.
+name|reader
+argument_list|()
+operator|.
+name|terms
+argument_list|(
+name|term
+operator|.
+name|field
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|terms
+operator|!=
+literal|null
+condition|)
+block|{
+name|TermsEnum
+name|termsEnum
+init|=
+name|terms
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|termsEnum
+operator|.
+name|seekExact
+argument_list|(
+name|term
+operator|.
+name|bytes
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|int
+name|freq
+init|=
+literal|1
+operator|-
+name|context
+operator|.
+name|docFreq
+argument_list|()
+decl_stmt|;
+comment|// we want the total df and ttf to be 1
+name|context
+operator|.
+name|register
+argument_list|(
+name|termsEnum
+operator|.
+name|termState
+argument_list|()
+argument_list|,
+name|leafContext
+operator|.
+name|ord
+argument_list|,
+name|freq
+argument_list|,
+name|freq
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+return|return
+operator|new
+name|TermQuery
+argument_list|(
+name|term
+argument_list|,
+name|context
+argument_list|)
+return|;
+block|}
+block|}
 annotation|@
 name|Override
 DECL|method|rewrite
@@ -1614,28 +1876,13 @@ decl_stmt|;
 name|Query
 name|tq
 init|=
-name|ignoreTF
-condition|?
-operator|new
-name|ConstantScoreQuery
+name|newTermQuery
 argument_list|(
-operator|new
-name|TermQuery
-argument_list|(
-name|st
-operator|.
-name|term
-argument_list|)
-argument_list|)
-else|:
-operator|new
-name|TermQuery
-argument_list|(
-name|st
-operator|.
-name|term
+name|reader
 argument_list|,
-literal|1
+name|st
+operator|.
+name|term
 argument_list|)
 decl_stmt|;
 name|tq
@@ -1706,28 +1953,13 @@ comment|// found a match
 name|Query
 name|tq
 init|=
-name|ignoreTF
-condition|?
-operator|new
-name|ConstantScoreQuery
+name|newTermQuery
 argument_list|(
-operator|new
-name|TermQuery
-argument_list|(
-name|st
-operator|.
-name|term
-argument_list|)
-argument_list|)
-else|:
-operator|new
-name|TermQuery
-argument_list|(
-name|st
-operator|.
-name|term
+name|reader
 argument_list|,
-literal|1
+name|st
+operator|.
+name|term
 argument_list|)
 decl_stmt|;
 name|tq
